<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gruas Barrón</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_item">Imagen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sintomas">Emergencias</string>
    <string name="title_activity_detalle_sintoma">Tipo de Emergencia</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_embarazo">Mapa</string>
    <string name="title_activity_calendario">Llamada</string>
    <string name="title_activity_humor">Tips</string>
    <string name="LblMes1">Mes 1</string>
    <string name="LblMes2">Mes 2</string>
    <string name="LblMes3">Mes 3</string>
    <string name="LblMes4">Mes 4</string>
    <string name="LblMes5">Mes 5</string>
    <string name="LblMes6">Mes 6</string>
    <string name="LblMes7">Mes 7</string>
    <string name="LblMes8">Mes 8</string>
    <string name="LblMes9">Mes 9</string>
    <string name="title_activity_detalle_humor">Tips para ti</string>

    <string name="title_activity_detalles_meses">DetallesMesesActivity</string>
    <string name="title_activity_detalle_embarazo">Detalle Embarazo</string>
    <string name="title_activity_agregar_nota">AgregarNotaActivity</string>
    <string name="title_activity_detalle_nota">DetalleNotaActivity</string>
    <string name="title_activity_modificar_nota">ModificarNotaActivity</string>
    <string name="title_activity_nota_">Nota_Activity</string>
    <string name="title_activity_conocenos2">Conocenos</string>
    <string name="title_activity_conocenos">Conocenos</string>
    <string name="NotaLblTitulo">Notas</string>
    <string name="btnAgregarNota">Agregar</string>
    <string name="Nota">Nota</string>

    <string name="LblAgregarTitulo">Agregar</string>
    <string name="NotaFecha">Fecha</string>
    <string name="NotaTitulo">Titulo</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnRegresar">Regresar</string>
    <string name="LblModificarTitulo">Modificar</string>
    <string name="ModificarbtnGuardar">Guardar</string>
    <string name="ModificarbtnRegresar">Regresar</string>
    <string name="title_activity_detalles_contacto">detalles_contacto</string>
    <!--string del llamada -->
    <string name="MainLblTitulo">Libreta de direcciones</string>
    <string name="btnAgregarContacto">Agregar</string>

    <!-- string del activity Agregarcontacto -->

    <string name="ContactoNombre">Nombre</string>
    <string name="ContactoDomicilio">Domicilio</string>
    <string name="ContactoTelefono">Telefono</string>
    <string name="ContactoEmail">E-mail</string>


    <string name="title_activity_agregar_contacto">Agregar Contacto</string>
<string name="title_activity_modificar_contacto">Modificar Contacto</string>

    <!--string del activity LLAMADA-->
    <string name="strNum1">1</string>
    <string name="strNum2">2</string>
    <string name="strNum3">3</string>
    <string name="strNum4">4</string>
    <string name="strNum5">5</string>
    <string name="strNum6">6</string>
    <string name="strNum7">7</string>
    <string name="strNum8">8</string>
    <string name="strNum9">9</string>
    <string name="strNum0">0</string>
    <string name="strNumeral">#</string>
    <string name="strAsterisco">*</string>
    <string name="strLlamar">Llamar</string>
    <string name="strSpace"></string>
    <string name="strDelete">&lt;&lt;</string>
</resources>
